tests/NormalTests/paczka1/fuzzy1/93356138.err
Error in line 10: FKHhTQNfT S889 89,8
Error in line 13: AjBU243k S889 6,10
Error in line 12: FKHhTQNfT A646 79,6
Error in line 22: S889 A382 30,8
Error in line 26: JcARoU6ew8 A793 41,5
Error in line 31: OCnowl3T S889 -3,3
Error in line 27: OCnowl3T S889 68,6
Error in line 33: OCnowl3T A646 35,0
Error in line 20: AjBU243k S889 19,3
